@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-09-25T01:42:40Z",
-  "count_outdated" : 225431,
-  "uniques_outdated" : 2227,
-  "count" : 227203,
-  "uniques" : 2246,
+  "timestamp" : "2024-09-26T01:40:43Z",
+  "count_outdated" : 225560,
+  "uniques_outdated" : 2229,
+  "count" : 227331,
+  "uniques" : 2247,
   "clones" : [
     {
-      "timestamp": "2024-09-11T00:00:00Z",
-      "count": 54,
-      "count_minmax": [ 54, 129 ],
-      "count_decinc": [ 75, 129 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
-    {
       "timestamp": "2024-09-12T00:00:00Z",
-      "count": 128,
-      "count_minmax": [ 128, 128 ],
-      "count_decinc": [ 0, 128 ],
+      "count": 53,
+      "count_minmax": [ 53, 128 ],
+      "count_decinc": [ 75, 128 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -124,12 +115,21 @@
     },
     {
       "timestamp": "2024-09-24T00:00:00Z",
-      "count": 126,
-      "count_minmax": [ 126, 126 ],
-      "count_decinc": [ 0, 126 ],
+      "count": 128,
+      "count_minmax": [ 126, 128 ],
+      "count_decinc": [ 0, 128 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-09-25T00:00:00Z",
+      "count": 126,
+      "count_minmax": [ 126, 126 ],
+      "count_decinc": [ 0, 126 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
