@@ -1,15 +1,10 @@
 {
-  "count": 1697,
-  "uniques": 6,
+  "count": 1696,
+  "uniques": 5,
   "clones": [
     {
-      "timestamp": "2024-09-11T00:00:00Z",
-      "count": 54,
-      "uniques": 2
-    },
-    {
       "timestamp": "2024-09-12T00:00:00Z",
-      "count": 128,
+      "count": 53,
       "uniques": 1
     },
     {
@@ -69,8 +64,13 @@
     },
     {
       "timestamp": "2024-09-24T00:00:00Z",
-      "count": 126,
+      "count": 128,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-09-25T00:00:00Z",
+      "count": 126,
+      "uniques": 1
     }
   ]
 }
